--- a/datanuke-main/pom.xml
+++ b/datanuke-main/pom.xml
@@ -20,6 +20,13 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+      <!-- https://mvnrepository.com/artifact/javax.json/javax.json-api -->
+      <dependency>
+          <groupId>javax.json</groupId>
+          <artifactId>javax.json-api</artifactId>
+          <version>1.1.2</version>
+      </dependency>
+
   </dependencies>
 
 
