--- a/datanuke-main/pom.xml
+++ b/datanuke-main/pom.xml
@@ -7,6 +7,15 @@
   <version>1.0-SNAPSHOT</version>
   <name>datanuke-main</name>
   <url>http://maven.apache.org</url>
+  <repositories>
+    <repository>
+      <id>snowtide-releases</id>
+      <url>http://maven.snowtide.com/releases</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+    </repository>
+  </repositories>
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -30,6 +39,12 @@
           <groupId>org.glassfish</groupId>
           <artifactId>javax.json</artifactId>
           <version>1.0.4</version>
+      </dependency>
+
+      <dependency>
+          <groupId>com.snowtide</groupId>
+          <artifactId>pdfxstream</artifactId>
+          <version>3.5.0</version>
       </dependency>
   </dependencies>
 
