--- a/datanuke-main/pom.xml
+++ b/datanuke-main/pom.xml
@@ -40,13 +40,17 @@
           <artifactId>javax.json</artifactId>
           <version>1.0.4</version>
       </dependency>
-
       <dependency>
           <groupId>com.snowtide</groupId>
           <artifactId>pdfxstream</artifactId>
           <version>3.5.0</version>
       </dependency>
+      <dependency>
+          <groupId>com.oracle</groupId>
+          <artifactId>javafx</artifactId>
+          <version>2.2</version>
+          <scope>system</scope>
+          <systemPath>${java.home}/lib/jfxrt.jar</systemPath>
+      </dependency>
   </dependencies>
-
-
 </project>
