--- a/datanuke-main/pom.xml
+++ b/datanuke-main/pom.xml
@@ -109,6 +109,11 @@
           <artifactId>javax.json-api</artifactId>
           <version>1.1</version>
       </dependency>
+      <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi</artifactId>
+          <version>4.0.0</version>
+      </dependency>
 
       <dependency>
           <groupId>org.glassfish</groupId>
