--- a/datanuke-main/pom.xml
+++ b/datanuke-main/pom.xml
@@ -114,7 +114,11 @@
           <artifactId>poi</artifactId>
           <version>4.0.0</version>
       </dependency>
-
+          <dependency>
+              <groupId>org.seleniumhq.selenium</groupId>
+              <artifactId>selenium-server</artifactId>
+              <version>3.0.1</version>
+          </dependency>
       <dependency>
           <groupId>org.glassfish</groupId>
           <artifactId>javax.json</artifactId>
