--- a/datanuke-main/pom.xml
+++ b/datanuke-main/pom.xml
@@ -129,12 +129,12 @@
           <artifactId>pdfxstream</artifactId>
           <version>3.5.0</version>
       </dependency>
-      <dependency>
+      <!--<dependency>
           <groupId>com.oracle</groupId>
           <artifactId>javafx</artifactId>
           <version>2.2</version>
           <scope>system</scope>
           <systemPath>${java.home}/lib/jfxrt.jar</systemPath>
-      </dependency>
+      </dependency>-->
   </dependencies>
 </project>
